# superide-rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  lapce.spec
.github/workflows/: ci.yml  release.yml
defaults/: icon-theme.toml  keymaps-common.toml  settings.toml  super-orange-dark.toml  super-orange-gradient.toml  super-orange-hc.toml  super-orange-light.toml  super-orange-neon.toml
docs/superide/: architecture.md  branding.md  folder-structure.md  frameworks.md  roadmap.md
extra/linux/: dev.lapce.lapce.desktop  dev.lapce.lapce.metainfo.xml
extra/linux/docker/debian/: Dockerfile
icons/codicons/: README.md
lapce-app/: Cargo.toml
lapce-app/src/: about.rs  app.rs  command.rs  config.rs  lib.rs  main_split.rs  plugin.rs  provider_settings.rs  settings.rs  title.rs  update.rs  welcome.rs  window_tab.rs
lapce-app/src/app/: logging.rs
lapce-app/src/config/: agent.rs  core.rs  editor.rs  icon.rs
lapce-app/src/panel/: chat_view.rs  data.rs  document_symbol.rs  kind.rs  mod.rs  view.rs
lapce-app/src/super_services/: agent_service.rs  event_bus.rs  extension_service.rs  mod.rs  settings_service.rs  state_store.rs  theme_service.rs  workspace_service.rs
lapce-core/: build.rs
lapce-proxy/: Cargo.toml
lapce-proxy/src/plugin/: mod.rs
superide-agent/: Cargo.toml
superide-agent/src/: agent_loop.rs  context_manager.rs  lib.rs  skills.rs  tool_registry.rs
superide-agent/src/tools/: file_tools.rs  mod.rs  terminal_tools.rs  web_search.rs
superide-ai/: Cargo.toml
superide-ai/src/: lib.rs  model_catalog.rs  provider_service.rs  token_usage.rs
superide-ai/src/providers/: anthropic.rs  deepseek.rs  grok.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  qwen.rs
superide-extension-host/: Cargo.toml
superide-extension-host/src/: contribution_registry.rs  discovery.rs  extension_host.rs  lib.rs  manifest.rs
superide-mcp/: Cargo.toml
superide-mcp/src/: client.rs  protocol.rs  transport.rs
superide-sdk/: Cargo.toml
superide-sdk/src/: agent.rs  event.rs  extension.rs  lib.rs  provider.rs
website/: index.html
website/css/: style.css
website/docs/: index.html
website/js/: main.js
(+4 files in other folders)
