[package]
name         = "superide-agent"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
superide-sdk = { path = "../superide-sdk" }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
ignore       = "0.4"
regex        = { workspace = true }
reqwest      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
