[package]
name         = "superide-ai"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
superide-sdk = { path = "../superide-sdk" }

anyhow      = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
parking_lot = { workspace = true }
tracing     = { workspace = true }
