[package]
name         = "superide-extension-host"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
superide-sdk  = { path = "../superide-sdk" }
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
tracing       = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
