[package]
name         = "superide-mcp"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
tracing        = { workspace = true }
